# python-project-template

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
