[tool.poetry]
name = "very_cool_project"
version = "0.1.0"
description = ""
authors = ["Egor <egor.birdi7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^19.10b0"
flake8 = "^3.7.9"
pre-commit = "^1.20.0"
isort = "^4.3.21"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 119
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
